@@ -15,6 +15,9 @@
      see #1464)
    * Fixed a bug when plotting non-DC beachball patches without fill colors
      (i.e. with "nofill=True", see #1464)
+   * Fix arbitrary units in waveform section plot's offset axis, making it
+     possible to add customizations to the plot afterwards (see #1382, see
+     #1383)
  - obspy.io.ascii:
    * Fixed a bug that lead to wrong header information in output files when
      writing non-integer sampling rate data to SLIST or TSPAIR formats
